massive overhaul - HTML structural fixes, green color change as well as background img, clickable images with captions and zoom effect, fixed positioning of avi and name via divwrapping, fixed UI scroller to sections

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,12 +1,45 @@
 * {
     font-family: Arial, Helvetica, sans-serif 
 }
+
+
+.topleft {
+
+}
+
+.topright {
+
+}
+
+body {
     
+}
+
+.backgroundimage {
+    background-image: url(https://images.unsplash.com/photo-1523828469188-8ec2b90b6490?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    filter: blur(20px); 
+}
+
+.wrapper {
+    position: relative;
+    z-index: 2;
+}
+
+#avi {
+    display: flex;
+    max-width: 120px;
+    max-height: 120px;
+}
+
 .namebar {
     display: flex;
     margin-right: auto;
-    font-size: larger;
-    font-weight: bold;
     padding: 10px;
 
     /* border: solid;
@@ -14,20 +47,32 @@
     border-radius: 2%; */
 }
 
+#JasonRich {
+    font-size: larger;
+    font-weight: bold;
+}
+
+
+
+.projects {
+    color: white;
+}
+
+
 nav {
-    background-color: rgb(255, 123, 0);
+    background-color: rgb(84, 151, 8);
     color: white;
     display: flex;
     flex: wrap;
-    justify-content: end;   
+    justify-content: space-between;   
     padding: 4px;
 }
 
-button {
+.button {
     padding: 1%;
     margin: 3px;
     border-radius: 5px;
-    background-color: rgb(255, 185, 92);
+    background-color: rgb(196, 255, 147);
     font-weight: bold;
     box-shadow: 1px 1px 5px;
 }
@@ -46,7 +91,7 @@ button {
 .button:focus {
     outline-color: transparent;
     outline-style:solid;
-    box-shadow: 0 0 0 4px #ff9252;
+    box-shadow: 0 0 0 4px #3cff00;
 }
 
 .header {
@@ -57,6 +102,47 @@ button {
     margin: auto;
 }
 
+.imgdiv {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: center;
+}
+
+.workimg {
+    height: 300px;
+    width: 300px;
+    border: black solid 5px;
+    margin: 20px;
+    -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .1s ease-in-out;
+	transition: .1s ease-in-out;
+}
+
+.workimg:hover {
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+    cursor: pointer;
+}
+
+.workimg:active {
+    background-color: brown;
+}
+
+
+.workimg:focus {
+    outline-color: transparent;
+    outline-style:solid;
+    box-shadow: 0 0 0 4px #3cff00;
+}
+
+#application1 {
+    height: 500px;
+    width: 500px;
+
+}
+
 /* .welcome { 
     display: flex;
     justify-content: end;
@@ -65,28 +151,10 @@ button {
     padding: 10px;
 } */
 
-img {
-    max-width: 120px;
-    max-height: 120px;
-    margin-right: 49%;
-
-}
-
 main {
+    position: relative;
     text-align: center;
 }
-
-#aboutme {
-    
-}
-
-
-
-/* arrange in row */
-.contact {
-    
-}
-
 
   footer {
     position: fixed;
@@ -96,9 +164,5 @@ main {
 }
 
 
-/* add img/avi of me - front page */
-/* UI scroller for clickable links (top right) */
-/* add titled images of previous applications (real or demonstration purposes?) */
-/* make first application larger than the rest */
-/* application images should be clickable (BUTTON: HOVER,FOCUS,ACTIVE), and deploy into other pages (NEW TAB) */
+/* application images should be clickable (BUTTON: HOVER,FOCUS,ACTIVE), and deploy into other pages (NEW TAB) .workimg:hover*/
 /* @Media screen resizer -- flex? */
